--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div>
             <h1 id="home">Can you find where you are in Honkai Star Rail?</h1>
-            <div id="version" class="version">v.1.0.8 (2.2#open-beta)/ @moemoe</div>
+            <div id="version" class="version">v.1.0.9 (2.2#open-beta)/ @moemoe</div>
             <div class="options-wrapper">
                 <button id="options" class="options" onclick="toggleOptions()"></button>
                 <button id="credits" class="credits" onclick="toggleCredits()"></button>
@@ -59,7 +59,9 @@
                   <br>
                   I am not affiliated with<span class="highlighted-credit">&nbsp;Honkai Star Rail&nbsp;</span>or<span class="highlighted-credit">&nbsp;Hoyoverse</span>.
                   <br>
-                  Playtesters:<span class="highlighted-credit">&nbsp;moemoe</span>,<span class="highlighted-credit">&nbsp;Nryst</span>,<span class="highlighted-credit">&nbsp;tuechinh08</span>,<span class="highlighted-credit">&nbsp;kimura_zukikuto.0007</span>,<span class="highlighted-credit">&nbsp;pigeonontree</span>,<span class="highlighted-credit">&nbsp;deyuaru</span>,<span class="highlighted-credit">&nbsp;hromer_</span>
+                  Playtesters:<span class="highlighted-credit">&nbsp;moemoe</span>,<span class="highlighted-credit">&nbsp;Nryst</span>,<span class="highlighted-credit">&nbsp;tuechinh08</span>,<span class="highlighted-credit">&nbsp;kimura_zukikuto.0007</span>,<span class="highlighted-credit">&nbsp;pigeonontree</span>,<span class="highlighted-credit">&nbsp;deyuaru</span>,
+                  <br>
+                  <span class="highlighted-credit">&nbsp;hromer_</span>,<span class="highlighted-credit">&nbsp;Zorus</span>
                 </div>
             </div>
             <div class="options-container" onclick="toggleOptions()"></div>
@@ -277,6 +279,19 @@
                     <p id="map-info"><span class="map-text">Map</span><br>Random</p>
                     <p id="round-info"></p>
                     <p id="score-info"></p>
+                    <img id="diff1" src="static/media/icons/diff1.png">
+                    <img id="diff2" src="static/media/icons/diff2.png">
+                    <img id="diff3" src="static/media/icons/diff3.png">
+                    <img id="diff4" src="static/media/icons/diff4.png">
+                    <img id="diff5" src="static/media/icons/diff5.png">
+                    <img id="diff6" src="static/media/icons/diff6.png">
+                    <img id="diff7" src="static/media/icons/diff7.png">
+                    <img id="diff8" src="static/media/icons/diff8.png">
+                    <img id="diff9" src="static/media/icons/diff9.png">
+                    <img id="filter1" src="static/media/icons/filter1.png">
+                    <img id="filter2" src="static/media/icons/filter2.png">
+                    <img id="filter3" src="static/media/icons/filter3.png">
+                    <img id="filter4" src="static/media/icons/filter4.png">
                 </div>
                 <div class="countdown-container">
                     <p id="countdown-text"><span id="countdown-value"></span></p>
