--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
             </video>
         </div>
         <div>
+            <div class="rotate-screen-mobile">
+                <div class="rotate-screen-mobile-text">Please rotate your device for best experience.</div>
+            </div>
             <h1 id="home">Can you find where you are in Honkai Star Rail?</h1>
-            <div id="version" class="version">v.1.0.93 (2.2#open-beta)/ @moemoe</div>
+            <div id="version" class="version">v.1.0.94 (2.3#open-beta)/ @moemoe</div>
             <div class="options-wrapper">
                 <button id="options" class="options" onclick="toggleOptions()"></button>
                 <button id="credits" class="credits" onclick="toggleCredits()"></button>
