--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div>
             <div class="rotate-screen-mobile">
-                <div class="rotate-screen-mobile-text">Please rotate your device for best experience.</div>
+                <div class="rotate-screen-mobile-text">Rotate your device for best experience.</div>
             </div>
             <h1 id="home">Can you find where you are in Honkai Star Rail?</h1>
             <div id="version" class="version">v.1.0.94 (2.3#open-beta)/ @moemoe</div>
