--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="rotate-screen-mobile-text">Rotate your device for best experience.</div>
             </div>
             <h1 id="home">Can you find where you are in Honkai Star Rail?</h1>
-            <div id="version" class="version">v.1.1.0 (2.3#release)/ @moemoe</div>
+            <div id="version" class="version">v.1.1.1 (2.3#release)/ @moemoe</div>
             <div class="options-wrapper">
                 <button id="options" class="options" onclick="toggleOptions()"></button>
                 <button id="credits" class="credits" onclick="toggleCredits()"></button>
@@ -321,12 +321,34 @@
                     <img id="filter4" src="static/media/icons/filter4.png">
                     <img id="debuff1" src="static/media/icons/debuff1.png">
                     <img id="debuff2" src="static/media/icons/debuff2.png">
+                    <img id="debuff5" src="static/media/icons/debuff5.png">
                     <img id="debuff3" src="static/media/icons/debuff3.png">
                     <img id="debuff4" src="static/media/icons/debuff4.png">
+                    <img id="debuff5-1" src="static/media/icons/debuff5-1.png">
+                    <img id="debuff5-2" src="static/media/icons/debuff5-2.png">
+                    <img id="debuff5-3" src="static/media/icons/debuff5-3.png">
+                    <img id="debuff5-4" src="static/media/icons/debuff5-4.png">
+                    <img id="debuff6" src="static/media/icons/debuff6.png">
+                    <img id="debuff6-1" src="static/media/icons/debuff6-1.png">
+                    <img id="debuff6-2" src="static/media/icons/debuff6-2.png">
+                    <img id="debuff6-3" src="static/media/icons/debuff6-3.png">
+                    <img id="debuff6-4" src="static/media/icons/debuff6-4.png">
+                    <img id="debuff6-5" src="static/media/icons/debuff6-5.png">
+                    <img id="debuff6-6" src="static/media/icons/debuff6-6.png">
+                    <img id="debuff6-7" src="static/media/icons/debuff6-7.png">
+                    <img id="debuff6-8" src="static/media/icons/debuff6-8.png">
+                    <img id="debuff6-9" src="static/media/icons/debuff6-9.png">
+                    <img id="debuff6-10" src="static/media/icons/debuff6-10.png">
                     <img id="buff1" src="static/media/icons/buff1.png">
                     <img id="buff2" src="static/media/icons/buff2.png">
                     <img id="buff3" src="static/media/icons/buff3.png">
                     <img id="buff4" src="static/media/icons/buff4.png">
+                    <img id="buff5" src="static/media/icons/buff5.png">
+                    <img id="buff5-1" src="static/media/icons/buff5-1.png">
+                    <img id="buff5-2" src="static/media/icons/buff5-2.png">
+                    <img id="buff5-3" src="static/media/icons/buff5-3.png">
+                    <img id="buff5-4" src="static/media/icons/buff5-4.png">
+                    <img id="buff6" src="static/media/icons/buff6.png">
                 </div>
                 <div class="countdown-container">
                     <p id="countdown-text"><span id="countdown-value"></span></p>
