--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
     <head>
         <title>Lost In Star Rail</title>
         <link rel="icon" href="static/media/home/march7thcheer.png">
-        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
         <link rel="stylesheet" href="static/css/styles.css">
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
@@ -16,6 +14,9 @@
         <script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-image/v0.0.4/leaflet-image.js'></script>
     </head>
     <body>
+        <div class="rotate-screen-mobile">
+            <div class="rotate-screen-mobile-text">Rotate your device for the best experience :D</div>
+        </div>
         <div class="container">
             <img src="static/media/home/list.png" alt="Lost In Star Rail" class="lihsr" id="homelogo">
             <video autoplay muted loop id="loadingscreen">
@@ -23,11 +24,8 @@
             </video>
         </div>
         <div>
-            <div class="rotate-screen-mobile">
-                <div class="rotate-screen-mobile-text">Rotate your device for best experience.</div>
-            </div>
             <h1 id="home">Can you find where you are in Honkai Star Rail?</h1>
-            <div id="version" class="version">v.1.1.1 (2.3#release)/ @moemoe</div>
+            <div id="version" class="version">v.1.1.12 (3.1#release)/ @moemoe</div>
             <div class="options-wrapper">
                 <button id="options" class="options" onclick="toggleOptions()"></button>
                 <button id="credits" class="credits" onclick="toggleCredits()"></button>
@@ -374,20 +372,20 @@
             <source id="audioSource" class="audioSource" type="audio/mp3" src="">
         </audio>
         <script src="static/js/play.js"></script>
-        <script src="static/js/audio.js"></script>
         <script src="static/js/settings.js"></script>
         <script src="static/js/togglecredits.js"></script>
         <script src="static/js/seed.js"></script>
         <script src="static/js/filter.js"></script>
         <script src="static/js/superstition.js"></script>
+        <script src="static/js/starrailmap.js"></script>
         <script src="static/js/score.js"></script>
         <script src="static/js/dropdown.js"></script>
-        <script src="static/js/starrailmap.js"></script>
         <script src="static/js/marker.js"></script>
         <script src="static/js/image.js"></script>
         <script src="static/js/spacebar.js"></script>
         <script src="static/js/time-countdown.js"></script>
         <script src="static/js/seetime-countdown.js"></script>
+        <script src="static/js/audio.js"></script>
             
         <script>
             // Click event handler debug
