--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Lost In Star Rail</title>
         <link rel="icon" href="static/media/home/march7thcheer.png">
@@ -27,8 +27,8 @@
             <h1 id="home">Can you find where you are in Honkai Star Rail?</h1>
             <div id="version" class="version">v.1.1.12 (3.1#release)/ @moemoe</div>
             <div class="options-wrapper">
-                <button id="options" class="options" onclick="toggleOptions()"></button>
-                <button id="credits" class="credits" onclick="toggleCredits()"></button>
+                <button name="options" id="options" class="options" onclick="toggleOptions()"></button>
+                <button name="credits" id="credits" class="credits" onclick="toggleCredits()"></button>
             </div>
             <div class="options-text" onclick="toggleOptions()">⚙ Options</div>
             <div class="options-app">
